[gd_scene load_steps=16 format=3 uid="uid://21dd7jmq3fjd"]

[ext_resource type="Script" path="res://stats_ui.gd" id="1_raalm"]
[ext_resource type="Texture2D" uid="uid://dllo67g7tjkg7" path="res://background/Bunk.png" id="1_yxj5i"]
[ext_resource type="Texture2D" uid="uid://dytjyjfp8cs5q" path="res://background/command.png" id="2_1bpum"]
[ext_resource type="Texture2D" uid="uid://dgspbip4p2uk6" path="res://background/Kitchen.png" id="3_5dpcc"]
[ext_resource type="Texture2D" uid="uid://kp6h0673ovp5" path="res://background/Lab.png" id="4_bkc3i"]
[ext_resource type="Texture2D" uid="uid://ci7lqmg75t4ua" path="res://background/Map.png" id="5_dvodn"]
[ext_resource type="Texture2D" uid="uid://cp10mmfsmagt4" path="res://background/Med.png" id="6_4yjrs"]
[ext_resource type="Texture2D" uid="uid://d1pm8iq2bqclo" path="res://background/Mine.png" id="7_s6uq0"]
[ext_resource type="Script" path="res://terminal.gd" id="8_pey6t"]
[ext_resource type="PackedScene" uid="uid://chdvhwutlyvfm" path="res://terminal_root.tscn" id="9_4cctw"]
[ext_resource type="Script" path="res://player.gd" id="9_7n80l"]
[ext_resource type="Texture2D" uid="uid://bgc7o0craxnpt" path="res://background/Sprites.png" id="10_gb75q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lu2jc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p7c82"]
atlas = ExtResource("10_gb75q")
region = Rect2(993, 369, 197, 200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_02gmo"]

[node name="Main" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="StatsUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
script = ExtResource("1_raalm")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/StatsUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 104.0
grow_horizontal = 0

[node name="IntegrityLabel" type="Label" parent="UI/StatsUI/VBoxContainer"]
layout_mode = 2

[node name="OxygenLabel" type="Label" parent="UI/StatsUI/VBoxContainer"]
layout_mode = 2

[node name="PowerLabel" type="Label" parent="UI/StatsUI/VBoxContainer"]
layout_mode = 2

[node name="GrowthLabel" type="Label" parent="UI/StatsUI/VBoxContainer"]
layout_mode = 2

[node name="Room" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="Room"]
custom_minimum_size = Vector2(800, 300)
offset_left = -48.0
offset_right = 752.0
offset_bottom = 567.0
color = Color(0.544974, 0.544974, 0.544974, 1)

[node name="Bunk" type="Sprite2D" parent="Room"]
position = Vector2(259, 80)
rotation = 3.14159
texture = ExtResource("1_yxj5i")

[node name="Command" type="Sprite2D" parent="Room"]
position = Vector2(619, 256)
rotation = -1.5708
texture = ExtResource("2_1bpum")

[node name="Kitchen" type="Sprite2D" parent="Room"]
position = Vector2(441, 80)
rotation = 3.14159
texture = ExtResource("3_5dpcc")

[node name="Lab" type="Sprite2D" parent="Room"]
position = Vector2(261, 447)
texture = ExtResource("4_bkc3i")

[node name="Map" type="Sprite2D" parent="Room"]
visible = false
position = Vector2(586.2, 312)
scale = Vector2(0.104062, 0.09375)
texture = ExtResource("5_dvodn")

[node name="Med" type="Sprite2D" parent="Room"]
position = Vector2(441, 447)
texture = ExtResource("6_4yjrs")

[node name="Mine" type="Sprite2D" parent="Room"]
position = Vector2(79, 258)
rotation = 1.5708
texture = ExtResource("7_s6uq0")

[node name="Terminal" type="Area2D" parent="Room"]
position = Vector2(100, 150)
script = ExtResource("8_pey6t")
terminal_ui_scene = ExtResource("9_4cctw")

[node name="ColorRect" type="ColorRect" parent="Room/Terminal"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room/Terminal"]
shape = SubResource("RectangleShape2D_lu2jc")

[node name="Label" type="Label" parent="Room/Terminal"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(50, 50)
script = ExtResource("9_7n80l")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(0.218274, 0.218274)
texture = SubResource("AtlasTexture_p7c82")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
scale = Vector2(2.2, 2.2)
shape = SubResource("RectangleShape2D_02gmo")

[connection signal="body_entered" from="Room/Terminal" to="Room/Terminal" method="_on_body_entered"]
[connection signal="body_exited" from="Room/Terminal" to="Room/Terminal" method="_on_body_exited"]
